--- a/.github/workflows/rut_test.yml
+++ b/.github/workflows/rut_test.yml
@@ -32,7 +32,7 @@ jobs:
     needs: test
     name: Generation report
     steps:
-      - uses: action/setup-java@v3
+      - uses: actions/setup-java@v3
         with:
           distribution: 'microsoft'
           java-version: '17'
