--- a/.github/workflows/rut_test.yml
+++ b/.github/workflows/rut_test.yml
@@ -3,6 +3,11 @@ name: Autometed Tests
 on:
   push
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   test:
     runs-on: ubuntu-latest
